--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,70 @@ img {
     fill: #f4f4fd;
 }
 
+/* Subscribe */
+
+.container-subscribe {
+    margin-left: 80px;
+}
+
+.subscribe {
+    color: #ffffff;
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.subscribe-form {
+    display: flex;
+}
+
+.label-subscribe {
+    gap: 24px;
+}
+
+.input-subscribe {
+    color: #ffffff;
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
+
+.input-subscribe::placeholder {
+    color: #ffffff;
+}
+
+.subscribe-button {
+    margin-left: 24px;
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+}
+
+.subscribe-icon {
+    margin-left: 16px;
+    fill: #FFFFFF;
+}
 /* modal window backdrop */
 .backdrop{
     position: fixed;
@@ -617,7 +681,8 @@ img {
 } 
 /*  */
 .backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scaleY(0);
+    /* transform: translate(-50%, -50%) scaleY(0); */
+    transform: translate(-50%, -50%) scale(1);
 }
 .modal-close {
     width: 24px;
@@ -638,10 +703,19 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover,
+.modal-close:hover {
+  background-color: #404bbf;
+  border: none;
+}
 .modal-close:focus {
-    fill: #FFFFFF;
-    background: #404BBF;
+  background-color: #404bbf;
+  border: none;
+}
+.modal-close:hover {
+  fill: #ffffff;
+}
+.modal-close:focus {
+  fill: #ffffff;
 }
 
 .modal-soc-icon{
@@ -650,7 +724,8 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     
 }
 
 /*  */
