--- a/css/style.css
+++ b/css/style.css
@@ -604,6 +604,7 @@ img {
 
 .subscribe-form {
     display: flex;
+    gap: 24px;
 }
 
 .label-subscribe {
@@ -629,7 +630,7 @@ img {
 }
 
 .subscribe-button {
-    margin-left: 24px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     min-width: 165px;
     height: 40px;
     display: flex;
@@ -645,6 +646,12 @@ img {
     background-color: #4D5AE5;
     border: none;
     border-radius: 4px;
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
+    background: #404BBF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .subscribe-icon {
@@ -703,19 +710,11 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover {
-  background-color: #404bbf;
-  border: none;
-}
+.modal-close:hover,
 .modal-close:focus {
-  background-color: #404bbf;
-  border: none;
-}
-.modal-close:hover {
-  fill: #ffffff;
-}
-.modal-close:focus {
-  fill: #ffffff;
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
 }
 
 .modal-soc-icon{
@@ -848,15 +847,16 @@ color: #8e8f99;
     fill: transparent;
     /*  */
 }
+
 .modal-field-text{
     margin-bottom: 16px;
   position: relative;
 }
-.modal-check:checked + .check-text span {
+input[type="checkbox"]:checked + .check-text span {
     background-color: #404bbf;
     border: none;
-    fill: #f4f4fd;
-     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #F4F4FD;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-field-check {
@@ -868,6 +868,10 @@ color: #8e8f99;
     font-family: "Roboto", sans-serif;
   color: #ffffff;
   background-color: #4d5ae5;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
   display: block;
   margin: 0 auto;
   min-width: 169px;
