--- a/css/style.css
+++ b/css/style.css
@@ -714,7 +714,6 @@ img {
 .modal-close:focus {
     background-color: #404bbf;
     border: none;
-    fill: #ffffff;
 }
 
 .modal-soc-icon{
@@ -836,7 +835,7 @@ color: #8e8f99;
     text-decoration-line: underline;
 }
 
-.check-text span {
+.span-privace {
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
@@ -845,19 +844,20 @@ color: #8e8f99;
     align-items: center;
   justify-content: center;
     fill: transparent;
-    /*  */
 }
 
 .modal-field-text{
     margin-bottom: 16px;
   position: relative;
 }
-input[type="checkbox"]:checked + .check-text span {
+
+.modal-check:checked + .check-text span {
     background-color: #404bbf;
     border: none;
-    fill: #F4F4FD;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #f4f4fd;
+     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .modal-field-check {
     margin-bottom: 24px;
