--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 :root {
     --first-title-color: #434455;
     --second-title-color: #2e2f42;
+    --span-background-color: #404bbf;
+    --icon-color: #F4F4FD;
 }
 
 
@@ -710,13 +712,6 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover,
-.modal-close:focus {
-    background-color: #404bbf;
-    border: none;
-    fill: #ffffff;
-}
-
 .modal-soc-icon{
     width: 8px;
     height: 8px;
@@ -727,6 +722,17 @@ img {
      
 }
 
+.modal-close:focus {
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
+}
+
+.modal-close:hover {
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
+}
 /*  */
 .is-hidden{
     visibility: none;
@@ -791,7 +797,7 @@ img {
 }
 
 .input-label{
-     font-weight: 400;
+font-weight: 400;
   font-size: 12px;
   color: #8e8f99;
   line-height: 1.17;
@@ -853,10 +859,10 @@ color: #8e8f99;
 }
 
 .modal-check:checked + .check-text span {
-    background-color: #404bbf;
+    background-color: var(--span-background-color);
     border: none;
-    fill: #f4f4fd;
-     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: var(--icon-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
