--- a/css/style.css
+++ b/css/style.css
@@ -722,16 +722,15 @@ img {
      
 }
 
+.modal-close:hover,
 .modal-close:focus {
-    background-color: #404bbf;
+    background-color: #404BBF;
     border: none;
-    fill: #ffffff;
 }
 
-.modal-close:hover {
-    background-color: #404bbf;
-    border: none;
-    fill: #ffffff;
+.modal-close:hover>.modal-soc-icon,
+.modal-close:focus>.modal-soc-icon {
+    fill: #FFFFFF;
 }
 /*  */
 .is-hidden{
