--- a/css/style.css
+++ b/css/style.css
@@ -712,12 +712,6 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover {
-    background-color: #404BBF;
-    border: none;
-    fill: #FFFFFF;
-}
-
 .modal-soc-icon {
     width: 8px;
     height: 8px;
@@ -725,7 +719,15 @@ img {
     align-items: center;
     justify-content: center;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
      
+}
+
+.modal-close:hover,
+.modal-close:focus {
+    background-color: #404BBF;
+    border: none;
+    fill: #FFFFFF;
 }
 
 /*  */
