--- a/css/style.css
+++ b/css/style.css
@@ -719,7 +719,7 @@ img {
     align-items: center;
     justify-content: center;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-     
+
 }
 
 .modal-close:hover,
@@ -728,8 +728,8 @@ img {
     border: none;
 }
 
-.modal-soc-icon:hover,
-.modal-soc-icon:focus {
+.modal-close:hover>.modal-soc-icon,
+.modal-close:focus>.modal-soc-icon {
     fill: #FFFFFF;
 }
 
