--- a/css/style.css
+++ b/css/style.css
@@ -694,25 +694,26 @@ img {
     transform: translate(-50%, -50%) scale(1);
 }
 .modal-close {
-    width: 24px;
-    height: 24px;
-    background-color: #e7e9fc;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    margin-left: auto;
-    display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  padding: 0;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: absolute;
+        top: 24px;
+        right: 24px;
+        padding: 0;
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        background-color: #E7E9FC;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 24px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-soc-icon {
+    fill: #2E2F42;
+    width: 8px;
+    height: 8px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
