--- a/css/style.css
+++ b/css/style.css
@@ -707,6 +707,7 @@ img {
         align-items: center;
         justify-content: center;
         margin-bottom: 24px;
+        cursor: pointer;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -724,8 +725,8 @@ img {
     border: none;
 }
 
-.modal-close:hover>.modal-soc-icon,
-.modal-close:focus>.modal-soc-icon {
+.modal-close:hover .modal-soc-icon,
+.modal-close:focus .modal-soc-icon {
     fill: #ffffff;
 }
 
