--- a/css/style.css
+++ b/css/style.css
@@ -673,6 +673,13 @@ img {
     background-color: rgba(46, 47, 66, 0.40);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+/*  */
+.is-open {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+}
+
 .modal{
     position: absolute;
     padding: 72px 24px 24px 24px;
@@ -728,13 +735,6 @@ img {
 .modal-close:hover .modal-soc-icon,
 .modal-close:focus .modal-soc-icon {
     fill: #ffffff;
-}
-
-/*  */
-.is-hidden{
-    visibility: none;
-    opacity: 0;
-    pointer-events: none;
 }
 
 
