--- a/css/style.css
+++ b/css/style.css
@@ -662,6 +662,9 @@ img {
 }
 /* modal window backdrop */
 .backdrop{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
     position: fixed;
     padding: 72px 24px 24px 24px;
     width: 100%;
@@ -713,7 +716,6 @@ img {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-bottom: 24px;
         cursor: pointer;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
